somewhat configured a backtester module